有SD卡时，将xml下载到本地sd卡，并解析，显示列表，并可调用支持流媒体的视频播放器进行播放 无SD卡时，直接解析网络XML，同上功能 还有BUG待查

--- a/trunk/res/values/strings.xml
+++ b/trunk/res/values/strings.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, MainActivity!</string>
     <string name="app_name">NetStream</string>
+    
+    <string name="laoding_text">正在加载...</string>
+    <string name="no_data">没有数据</string>
+    <string name="load_error">加载失败，请点击重试</string>
+    <string name="no_software_to_play">没有找到可以播放此视频的软件</string>
 </resources>
