将下载逻辑删除，仅保存网络解析模块 删除无用的代码 替换Icon 实现功能：只能在有网络连接的时候使用，否则加载失败。无法使用

--- a/trunk/res/values/strings.xml
+++ b/trunk/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="no_data">没有数据</string>
     <string name="load_error">加载失败，请点击重试</string>
     <string name="no_software_to_play">没有找到可以播放此视频的软件</string>
+    
+    <string name="list_path">http://netstream.googlecode.com/svn/trunk/list/list.xml</string>
 </resources>
