--- a/trunk/res/values/strings.xml
+++ b/trunk/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">NetStream</string>
+    <string name="app_name">TVS</string>
     
     <string name="laoding_text">正在加载...</string>
     <string name="no_data">没有数据</string>
@@ -8,4 +8,8 @@
     <string name="no_software_to_play">没有找到可以播放此视频的软件</string>
     
     <string name="list_path">http://netstream.googlecode.com/svn/trunk/list/list.xml</string>
+    
+    <string name="tab_name_stream_list">net stream</string>
+    <string name="tab_name_fm">net FM</string>
+    <string name="tab_name_collect">My List</string>
 </resources>
